--- a/app/views/savings/add_saving_investment.html
+++ b/app/views/savings/add_saving_investment.html
@@ -51,8 +51,8 @@
             </div>
 
             <div class="col-md-offset-5">
-                <a id="cancel" ng-href="{{cancel}}" class="btn btn-default">{{'label.button.cancel' | translate}}</a>
-                <button id="save" type="submit" class="btn btn-primary"  ng-hide="blockUI" has-permission='CREATE_CLIENT'>{{'label.button.save' | translate}}</button>
+                <button class="btn btn-primary" ng-click="gotoBack()"> Cancle</button>
+                <button id="save" type="submit" ng-click="abc()" class="btn btn-primary"  ng-hide="blockUI">{{'label.button.save' | translate}}</button>
                 <button class="btn btn-info" ng-show="blockUI"><strong>{{'label.button.processing' | translate}}</strong></button>
             </div>
         </fieldset>
