--- a/app/views/loans/addloaninvestment.html
+++ b/app/views/loans/addloaninvestment.html
@@ -23,10 +23,15 @@
                         <option value="">--Select Saving --</option>
                     </select>
                 </div>
+                <label class="control-label col-sm2">Add Investment Amount </label>
+                <div class="col-sm-3">
+                    <input type="text" id="investedAmount" name="investedAmount" ng-model="formData.investedAmount"  class="form-control"/>
+                </div>
                 <div class="col-md-1">
                     <a class="btn bg-primary" ng-click='addInvestment(formData.Id)'><i class="icon-plus"></i></a>
                 </div>
             </div>
+
 
             <div class="form-group">
                 <table class="table " style="table-layout: fixed;">
@@ -36,6 +41,7 @@
                         <th> {{'label.heading.savingproductname' | translate}}</th>
                         <th> {{'label.heading.savingaccountno' | translate}}  </th>
                         <th> {{'label.heading.savingamount' | translate}}</th>
+                        <th> Invested Amount </th>
                     </tr>
                     </thead>
                     <tbody>
@@ -44,6 +50,7 @@
                         <td> {{investment.productname}}</td>
                         <td>{{investment.accountno}}</td>
                         <td> {{investment.savingamount}}</td>
+                        <td> {{investment.investedAmount}}</td>
                     </tr>
                     </tbody>
                 </table>
