#2324 Enhancement:Viewing Deposit Account On Hold Transactions Page

--- a/app/views/savings/view_saving_account_details.html
+++ b/app/views/savings/view_saving_account_details.html
@@ -269,7 +269,7 @@
                                 <td><span class="padded-td">
                                      <a class="btn-link"
                                         has-permission='READ_SAVINGSACCOUNT'
-                                        href="#/viewonholdtransactions/{{savingaccountdetails.id}}/viewsavingaccount/{{savingaccountdetails.id}}">
+                                        href="#/onholdtransactionsview/{{savingaccountdetails.id}}">
                                          {{savingaccountdetails.onHoldFunds| number}}
                                      </a>
                                     </span></td>
