sms screen message has been change for the on demand

--- a/app/views/organization/sms.html
+++ b/app/views/organization/sms.html
@@ -7,7 +7,7 @@
 
     <form name="sendSmsForm" novalidate="" class="form-horizontal well" ng-controller="SmsController">
         <div ng-show="complete1==true">
-            <h3>Sms Send Sucessfully</h3>
+            <h3>Request has been accepted. SMS are in process of Sending...!</h3>
         </div>
         <div ng-show="send==false">
             <p  style="color:red"> Branch is not enable for sending message </p>
